Update das imagens

--- a/Projetos/farol.html
+++ b/Projetos/farol.html
@@ -44,13 +44,13 @@
 
   <section id="section-project">
     <div>
-      <img class="cubo" src="/images/Farol/Farol.jpg" alt="">
-      <img class="cubo" src="/images/Farol/Farol3.jpg" alt="">
-      <img class="cubo position" src="/images/Farol/Farol5.jpg" alt="">
-      <img class="cubo position" src="/images/Farol/Farol2.jpg" alt="">
-      <img class="cubo retangulo" src="/images/Farol/Farol1.jpg" alt="">
-      <img class="cubo retangulo" src="/images/Farol/Farol4.jpg" alt="">
-      <img class="cubo retangulo" src="/images/Farol/Farol6.jpg" alt="">
+      <img class="cubo" src="/images/Farol/farol.jpg" alt="">
+      <img class="cubo" src="/images/Farol/farol3.jpg" alt="">
+      <img class="cubo position" src="/images/Farol/farol5.jpg" alt="">
+      <img class="cubo position" src="/images/Farol/farol2.jpg" alt="">
+      <img class="cubo retangulo" src="/images/Farol/farol1.jpg" alt="">
+      <img class="cubo retangulo" src="/images/Farol/farol4.jpg" alt="">
+      <img class="cubo retangulo" src="/images/Farol/farol6.jpg" alt="">
       <img class="cubo retangulo" src="/images/Farol/farol7.jpg" alt="">
     </div>
   </section>
