--- a/Projetos/desenhoG.html
+++ b/Projetos/desenhoG.html
@@ -17,12 +17,12 @@
 <body>
   <nav id="navigation">
     <div class="wrapper">
-      <a class="logo close" href="/home.html">The Big Three</a>
+      <a class="logo close" href="/index.html">The Big Three</a>
 
       <div class="menu">
         <ul>
           <li>
-            <a href="/home.html#projects">Voltar</a>
+            <a href="/index.html#projects">Voltar</a>
           </li>
       </div>
       </button>
