--- a/Projetos/formasP.html
+++ b/Projetos/formasP.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -17,12 +19,12 @@
 <body>
   <nav id="navigation">
     <div class="wrapper">
-      <a class="logo close" href="/home.html">The Big Three</a>
+      <a class="logo close" href="/index.html">The Big Three</a>
 
       <div class="menu">
         <ul>
           <li>
-            <a href="/home.html#projects">Voltar</a>
+            <a href="/index.html#projects">Voltar</a>
           </li>
       </div>
       </button>
