--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <nav id="navigation">
     <div class="wrapper">
-      <a class="logo close" href="/home.html">The Big Three</a>
+      <a class="logo close" href="/index.html">The Big Three</a>
 
       <div class="menu">
         <ul>
